fixed overlapping search box issue with search--small in style.css

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,10 @@
 /* add styles here */
 
+:root {
+  --search-small-height: 42px;
+  --search-big-height: 70px;
+}
+
 @font-face {
   font-family: 'Avenir Book';
   src: url(fonts/Avenir-Book.ttf);
@@ -19,24 +24,25 @@
 }
 
 .search--big {
-  height: 70px;
+  height: var(--search-big-height);
   width: 100%;
-  line-height: 70px;
+  line-height: var(--search-big-height);
 }
 
 .search--small {
-  height: 42px;
+  height: var(--search-small-height);
   width: 50%;
-  line-height: 42px;
+  line-height: var(--search-small-height);
 }
 
 .search__input {
+  box-sizing: border-box;
   border: none;
   width: 100%;
   height: 19px;
   background-image: url(images/search.svg);
   background-repeat: no-repeat;
-  background-position: 0 center;
+  background-position: 10px center;
   padding-left: 40px; /* Adjust as needed based on image size */
   background-size: 19px 19px;
 }
